Statistics completed (https://github.com/AdamBien/e2ftp/issues/4)

--- a/ftpserver/src/main/webapp/index.html
+++ b/ftpserver/src/main/webapp/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>FTP Server is deployed</h1>
+        <h1>FTP Server is up and running</h1>
+        <p><a href="/ftpserver/api/statistics">Statistics</a></p>
     </body>
 </html>
