--- a/ftpserver/src/main/webapp/index.html
+++ b/ftpserver/src/main/webapp/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>FTP Server is up and running</h1>
         <p><a href="/ftpserver/api/statistics">Statistics</a></p>
+        <p><a href="/ftpserver/api/configuration">Configuration</a></p>
+
     </body>
 </html>
