Authentication and log purging added

--- a/hook-test-client/src/main/webapp/index.xhtml
+++ b/hook-test-client/src/main/webapp/index.xhtml
@@ -16,6 +16,7 @@
                 Last Callback:<h:outputText value="#{index.callback}"/><br/>
                 <h:commandButton value="Register" action="#{index.register}"/>
                 <h:commandButton value="Refresh" action="index"/>
+                <h:commandButton value="Clear" action="#{index.clear}"/>
             </h:form>
         </f:view>
     </h:body>
