--- a/ftpserver/src/main/webapp/index.html
+++ b/ftpserver/src/main/webapp/index.html
@@ -5,9 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>FTP Server is up and running</h1>
+        <h1>FTP Server is up</h1>
         <p><a href="/ftpserver/api/statistics">Statistics</a></p>
         <p><a href="/ftpserver/api/configuration">Configuration</a></p>
+        <p><a href="/ftpserver/api/management">Management</a></p>
 
     </body>
 </html>
